--- a/app/views/coupons/show.html.erb
+++ b/app/views/coupons/show.html.erb
@@ -1,3 +1,1 @@
-<% @coupons.each do |coupon| %>
-  <h1><%= link_to coupon.coupon_code, coupon_path(coupon) %> | <%= coupon.store %><h1>
-<% end %>
+<h1><%= @coupon.coupon_code %> / <%= @coupon.store %></h1>
